# finance_projects

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
finance_projects/: __init__.py  dataset.py  features.py  plots.py
finance_projects/modeling/: predict.py  train.py
notebooks/: essential_finance.ipynb  momentum_trading.ipynb  portfolio_optimization.ipynb  portfolio_theory.ipynb  simple_forcast.ipynb  stock_indexing.ipynb  time_series.ipynb
